--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Oscar Aguilar",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
